some more update to ustabel version 1.3

--- a/README
+++ b/README
@@ -1,9 +1,4 @@
 Get it via Android Market.
 https://market.android.com/details?id=com.voidcode.diasporawebclient
 
-TODO.
-1) Add: json paser to read pods from http://podupti.me (only https) (see https://github.com/voidcode/Diaspora-Webclient/blob/master/src/com/voidcode/diasporawebclient/SettingsActivity.java)
-2) Add: Google translate button/ link to all posts (see https://github.com/diaspora/diaspora/issues/2441#issuecomment-2884673)
-3) Add: Pod recognition from username handle, instead of 
-choosing it from a list. Maby diaspora connect can do this. 
-4) Add diaspora messages Activtiy. Make like a SMS client.
+TODO(see: https://github.com/voidcode/Diaspora-Webclient/wiki/TODO)
