--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="menu_findtag">Find tag</string>
     <string name="menu_settings">Settings</string>
     <string name="menu_tips">Tips</string>
+    <string name="menu_donation">Donation</string>
     <string name="menu_translate">Translate</string> 
     <string name="menu_contacts">Contacts</string>
     <string name="menu_notifications">Notifications</string>
@@ -27,7 +28,7 @@
      <string name="settings_button_save">Use this pod</string>
      
      <string name="setupinternet_h1">Setup internet</string>
-     <string name="setupinternet_text">You need a Wifi or 3G connection!!</string>
+     <string name="setupinternet_text">You need a Wifi or 3G connection!</string>
      <string name="setupinternet_button">Close</string>
      <string name="findtag_h1">Findtag</string>
      <string name="findtag_p">Type a word and see what the stream contains</string>
@@ -39,9 +40,10 @@
          
      <string name="settings_button_close">Close</string>
      
-         
-     <string name="translate_h1">Add your Google translate api key.</string>
+     <string name="translate_chooselanguage_h1">Choose translate to language.</string>
+     <string name="translate_googlekey_h1">Add your Google translate api key.</string>
      <string name="translate_button_text">Use this key</string>
      <string name="translate_button_linkto_googleapiconsole">Google api console</string>
-     <string name="translate_howto_text">Google Translate API v2 pricing is based on usage. Translation usage is calculated in millions of characters (M), where 1 M = 106 characters. Important: Google Translate API v2 requires billing information for all accounts before you can start using the service. To sign up for billing, sign in to the Google APIs console and click the Billing tab. 1 M characters of text = $20.</string>
+     <string name="translate_howto_text">Google Translate API v2 pricing is based on usage. Translation usage is calculated in millions of characters (M), where 1 M = 10^6 characters. Important: Google Translate API v2 requires billing information for all accounts before you can start using the service. To sign up for billing, sign in to the Google APIs console and click the Billing tab. 1 M characters of text = $20.</string>
+     <string name="translate_button_howto_obtain_googletranslatekey">See how you obtain the Google Translate Key</string>
 </resources>
