update README file

--- a/README
+++ b/README
@@ -1,4 +1,2 @@
-Get it via Android Market.
-https://market.android.com/details?id=com.voidcode.diasporawebclient
-
-TODO(see: https://github.com/voidcode/Diaspora-Webclient/wiki/TODO)
+How to get the Diaspora-Webclient.
+See: https://github.com/voidcode/Diaspora-Webclient/wiki
