--- a/README
+++ b/README
@@ -1,2 +1,4 @@
 How to get the Diaspora-Webclient.
 See: https://github.com/voidcode/Diaspora-Webclient/wiki
+---
+[![Flattr this git repo](http://api.flattr.com/button/flattr-badge-large.png)](https://flattr.com/submit/auto?user_id=Voidcode&url=https://github.com/voidcode/Diaspora-Webclient&title=Diaspora-Webclient&language=&tags=github&category=software) 
