--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="menu_home">Stream</string>
     <string name="menu_share">Share</string>
     <string name="menu_findtag">Find tag</string>
-    <string name="menu_settings">Settings</string>
+    <string name="menu_podsettings">PodSettings</string>
     <string name="menu_tips">Tips</string>
     <string name="menu_donation">Donation</string>
     <string name="menu_translate">Translate</string> 
@@ -19,13 +19,16 @@
     <string name="menu_invite">Invite</string>
     <string name="menu_exit">Exit</string>
     
-    <string name="settings_h1">Settings.</string>
-    <string name="settings_text_currentpod">Find your pod.</string>
-    <string name="settings_currentpod"></string>
-  
+    <string name="podsettings_h1">Settings.</string>
+    <string name="podsettings_text_currentpod">Find your pod.</string>
+    <string name="podsettings_currentpod"></string>
+    
+    <string name="podsettings_dialog_title">PodSettings</string>
+  	<string name="podsettings_dialog_text">You have to choose a pod before you can logon Diaspora.\nWith this client you wil only be enable to logon pods there uses https.\nAll pods showing in the list is from podupti.me and uses https.</string>
+        
     <string name="widget_button_share">Share on diaspora</string>   
      
-     <string name="settings_button_save">Use this pod</string>
+     <string name="podsettings_button_save">Use this pod</string>
      
      <string name="setupinternet_h1">Setup internet</string>
      <string name="setupinternet_text">This app require a internet connection!</string>
@@ -39,7 +42,7 @@
      <string name="findtag" >findtag</string>
      
          
-     <string name="settings_button_close">Ok</string>
+     <string name="podsettings_button_close">Ok</string>
      
      <string name="translate_chooselanguage_h1">Translate post to this language.</string>
      <string name="translate_googlekey_h1">Add your translate api-key here.</string>
